data/derived/fa15/progs/unify/prog3152.ml.out
Characters 38-61:
  let stringOfList f l = "[" ^ sepConcat("; ", List.map (f, l)) ^ "]";;
                                        ^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type string
